css/styles.css
:root {
  --custom-BR: 25px;
  --custom-light-gray: #e0e0e0
}

body {
  background-color: cadetblue;
}

.modal-content {
  border-radius: var(--custom-BR) !important;
  overflow: hidden !important;
}

html, body {
  width: 100%;
  height:100%;
}

body {
    background: linear-gradient(-45deg, #FF6C32, #4b8bf2, #FF6C32);
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;
}

@keyframes gradient {
    0% {
        background-position: 0 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0 50%;
    }
}

.overlay {
  background-color: rgba(255, 255, 255, 0.85);
  width: 100%;
  height: 100%;
  align-items: center;
  justify-items: center;
  justify-content: center;
  display: flex;
  overflow: auto;
}

.contact-list-card {
  display: flex;
  justify-items: left;
  width: 100%;
  flex: 1 1 auto;
  overflow: auto;
  /*
    Safari Scroll Bar Bug workaround
   */
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  transform: translateZ(0px);
}

.contacts {
  overflow: auto;
  border-bottom: 1px solid var(--custom-light-gray);
}

.contact-data {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: auto;
}

.contact-info {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 500px;
  overflow: auto
}

.contact-display {
  display: flex;
  flex-direction: column;
  width: 100%;
  min-width: 350px;
  overflow: auto;
  flex: 1 1 auto;
}

.info-pane {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.contact-info-header {
  display: flex;
  padding: 5px;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid var(--custom-light-gray);
}

.contact-list-display {
  display: flex;
  flex-direction: column;
  margin-right: 20px;
  min-width: 350px;
}

.list-group-item {
  border-bottom: none !important;
  border-left: none !important;
  border-right: none !important;
}

.contact-link {
  color: inherit;
}

.contact-card:hover {
  background-color: var(--custom-light-gray);
  transition: 0.3s;
}

.list-group-item.active {
  transition: 0.3s;
}

.beveledBox {
  background-color: white;
  border-radius: var(--custom-BR);
}

.profile-icon {
  width: 40px;
  height: 40px;
  max-height: 40px;
  min-width: 40px;
  border-radius: 20px;
  background-color: #c2c2c2;
  color: white;
  margin: 5px;
  overflow: hidden;
}

.profile-icon.enlarged {
  width: 80px;
  height: 80px;
  min-height: 80px;
  min-width: 80px;
  border-radius: 40px;
  background-color: #c2c2c2;
}

.form-control.search-bar[type=text] {
  height: 40px;
  background-color: var(--custom-light-gray);
  border: none;
}

.list-group-item {
  cursor: pointer;
}

.form-control.search-bar[type=text]:focus {
  background-color: var(--custom-light-gray);
}

h3.profile-ab{
  text-align: center;
  font-weight: bold !important;
  font-size: 18px;
  margin-bottom: 0;
  text-transform: uppercase;
}

label.contact-field {
  width: 100%;
  font-size: 15px;
  text-align: left;
  color: gray;
}

p.contact-field {
  font-size: 25px;
  text-align: left;
  margin-bottom: 0;
}

h3.profile-ab.enlarged{
  text-align: center;
  margin-bottom: 0;
  font-size: 30px !important;
}

.loginHeader {
  margin-bottom: 20px; margin-top: 20px;
}

.loginCard {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  z-index: 0;
}

.landing-body {
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;
  background-color: cornflowerblue;
  height: 100%;
}

.container.loginContainer {
  max-width: 500px;
  /*min-height: 400px;*/
  background-color: white;
  border-radius: var(--custom-BR);
  padding: 25px;
  z-index: 1;
}

.container.backgroundContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1500px;
  width: 90%;
  background-color: #00000055;
  border-radius: var(--custom-BR);
  padding: 25px;
  height: 90%;
  max-height: 1000px;
  min-height: 400px;
  min-width: 800px;
}

.btn.rounded {
  height: 40px;
  border-radius: 20px !important;
}

.rounded.compact {
  font-weight: bold;
}

.modal-footer.spaced {
  display: flex;
  justify-content: space-between;
}

.box {
  display: flex;
  justify-content: center;
  /* align-self: center;    <---- REMOVE */
  align-items: center;   /* <---- NEW    */
  background: silver;
}

.form-control.firstName {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border-right: none;
  margin-right: 1px;
  position: relative;
}

.loginForm {
  width: 75%;
}

.loginForm .form-control:focus {
  z-index: 5;
}

label {
  /*
   Floating labels would get hidden by focused elements that increased their z-index,
   This css ensures the label z index is always on top.
  */
  z-index: 6;
}

.form-control.lastName {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  position: relative;
}

.login-new {
  background-color: red;
}

.backgroundBlurImg {
  position: absolute;
  background-image: url("/images/office-lores.jpg");
  overflow: hidden;

  /* Full height */
  height: 100%;
  width: 100%;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  z-index: -1;
}

.login {
  display: grid;
  row-gap: 0;
  float: left;
  background-color: #ffffef;
  overflow: hidden;
  font-size: 1vw;
  max-height: 59vh;
  width: 30vw;
  height: 30vw;
  left: 0;
  margin-left: 20vw;
  margin-top: 10vh;
  border-top-left-radius: var(--custom-BR);
  border-bottom-left-radius: var(--custom-BR);
}

.title {
  grid-row: 1;
  font-size: 2vw;
  text-align: center;
  font-family: "Roboto", sans-serif;
  color: #2f4f4f;
}

.subtitle {
  grid-row: 2;
  font-size: 1.5vw;
  text-align: center;
  font-family: "Roboto", sans-serif;
  color: #2f4f4f4f;
}

.loginTitle {
  grid-row: 3;
  font-size: 1vw;
  font-family: "Roboto", sans-serif;
  text-align: center;
  color: #2f4f4f;
}

.loginData {
  grid-row: 4;
  display: grid;
  font-family: "Roboto", sans-serif;
  text-align: center;
  font-size: 1vw;
  color: #696969;
}

.loginLabel {
  display: inline-block;
  text-align: center;
}

.dataEntry {
  border: 1px solid lightgray;
  display: inline-block;
  border-radius: 20px;
  text-align: center;
  margin: auto;
  width: 80%;
  font-family: "Roboto", sans-serif;
}

#loginStatus {
  grid-row: 5;
}
#errorDump {
  grid-row: 5;
}

.buttons {
  grid-row: 6;
  font-size: 1vw;
  border-radius: var(--custom-BR);
  width: 25%;
  margin: auto;
  font-family: "Roboto", sans-serif;
}

.buttons:hover {
  background-color: #696969;
  color: #69696969;
  opacity: 50%;
}


.createAccount {
  font-size: 10px;
  border-radius: var(--custom-BR);
  width: 90%;
  margin: auto;
  font-family: "Roboto", sans-serif;
}

.btn.btn-primary.add-button {
  display: flex;
  min-height: 40px;
  border-radius: 20px;
  min-width: 40px;
  padding: 0 10px 0 0;
  align-items: center;
  justify-content: space-between
}

.phoneImage {
  float: left;
  max-height: 60%;
  width: 30vw;
  height: 30vw;
  margin-top: 10vh;
}

.contactical {
  display: block;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  z-index: -1;
  position: relative;
  left: 0;
  border-top-right-radius: var(--custom-BR);
  border-bottom-right-radius: var(--custom-BR);
}

.contacticalHand {
  /* display: block; */
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  z-index: 1;
  left: 0;
  border-top-right-radius: 25px;
  border-bottom-right-radius: 25px;
}

a.contact-link {
  text-decoration: none;
}
/* CREATE ACCOUNT */

